# StockSimulator

./: .gitignore  BankSystem.cpp  BankSystem.hpp  BankruptcyState.cpp  BankruptcyState.hpp  CMakeLists.txt  Commodity.hpp  Company.hpp  EventSystem.cpp  EventSystem.hpp  Game.cpp  Game.hpp  GameState.hpp  Mail.hpp  MainMenuState.cpp  MainMenuState.hpp  PlayingState.cpp  PlayingState.hpp  Sector.hpp  main.cpp
assets/: commodities.json  companies.json  events.json
